# gerrit-gha

docker-stack/: .gitignore  README.md  go  swarm.yaml
docker-stack/nats-context/context/: swarm.json
plugin/: README.md  package-lock.json  package.json
plugin/src/: fetcher.ts  plugin.ts  speer.ts
speer/: .gitignore  README.md  pyproject.toml
speer/docker/: Dockerfile  entrypoint.sh  go
speer/docs/: design.md
speer/src/speer/: checks_datamodel.py  main.py  speer_datamodel.py
