[project]
name = "speer"
version = "0.1.0"
description = "Gerrit/CI Integration tool"
readme = "README.md"
authors = [
    { name = "Chris Hillery", email = "ceej-speer@hillery.land" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
]

[project.scripts]
speer = "speer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
